kubeapps/kubeapps-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubeapps
  labels:
    name: kubeapps
